<resources>
    <string name="app_name">POIApp</string>

    <string name="logo_picture">Logo Picture</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sample_message">Hello!</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="google_maps_API_key">AIzaSyAb7cS6j6sABAzNX-LvwTNBrjsR1YNYoyc</string>
    <string name="google_places_API_key">AIzaSyCr9IWRpDQiErgDY-HDnShGUXaAGm4GLRQ</string>
    <string name="google_places_API_key_2">AIzaSyDBOy2mCnhP8fl3_nvrAemV_80_hXemJJc</string>
    <string name="username">Username</string>

</resources>
