<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_page_mountains"
    android:gravity="top"
    android:theme="@android:style/Theme.Holo.NoActionBar">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_above="@+id/register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/logo_picture"
        app:srcCompat="@drawable/logo_world"/>

    <AutoCompleteTextView
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_email"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/prompt_username"
        android:imeOptions="actionNext"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"
        android:textIsSelectable="false"
        android:textStyle="bold"/>

    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_password"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_marginEnd="20dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"
        android:textIsSelectable="false"
        android:layout_marginRight="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_confirm_password"
        android:layout_alignLeft="@+id/register_confirm_password"
        android:layout_alignStart="@+id/register_confirm_password"
        android:layout_marginEnd="20dp"
        android:hint="@string/prompt_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"
        android:layout_marginRight="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/button_register_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/prompt_password_again"
        android:imeActionId="@integer/register_form_finished"
        android:imeActionLabel="@string/action_sign_up"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_register_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/action_sign_up"
        android:textColor="@color/yellowDark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#60000000"
        android:onClick="signUp"/>

</RelativeLayout>