<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lauracanter.poiapp.LoginActivity"
    android:background="@drawable/login_background_myphoto"
    android:theme="@style/NoActionBar">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        app:srcCompat="@drawable/logo_world"/>

    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/prompt_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"
        android:textIsSelectable="false"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_sign-in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/prompt_password"
        android:imeActionId="@integer/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/yellowSecondary"
        android:textColorHint="#80ffa726"/>


    <Button
        android:id="@+id/button_sign-in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_register"
        android:layout_alignLeft="@+id/button_register"
        android:layout_alignStart="@+id/button_register"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#10ffa726"
        android:onClick="signInExistingUser"
        android:text="@string/action_sign_in_short"
        android:textColor="@color/yellowDark"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:onClick="registerNewUser"
        android:text="@string/action_register"
        android:background="#20ffa726"
        android:textColor="@color/yellowDark"
        android:textSize="18sp"
        android:textStyle="bold"/>

</RelativeLayout>
